--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
   loki:
     image: grafana/loki:2.4.1
     volumes:
-      - /Users/rixonmathew/rixmbssd/apps/loki-docker/loki:/etc/loki
+      - /home/rixon/grafana-loki/loki:/etc/loki
     ports:
       - "3100:3100"
     restart: unless-stopped
@@ -16,8 +16,8 @@ services:
     image: grafana/promtail:2.4.1
     volumes:
       - /var/log:/var/log
-      - /Users/rixonmathew/rixmbssd/logs/app_logs:/app_logs
-      - /Users/rixonmathew/rixmbssd/apps/loki-docker/promtail:/etc/promtail
+      - /mnt/d/app_logs:/app_logs
+      - /home/rixon/grafana-loki/promtail:/etc/promtail
     ports:
       - "1514:1514" # this is only needed if you are going to send syslogs
     restart: unless-stopped
@@ -28,7 +28,7 @@ services:
     image: grafana/grafana:latest
     user: "1000"
     volumes:
-    - /Users/rixonmathew/rixmbssd/apps/loki-docker/grafana:/var/lib/grafana
+    - /home/rixon/grafana-loki/grafana:/var/lib/grafana
     ports:
       - "3000:3000"
     restart: unless-stopped
